# mindatGIS

./: .gitignore  README.md  mindat.py  pyproject.toml
mindatGIS/: extract.py  geojsonl.py  geomaterials.py  locality.py  mindat.py  padus3.py  spatialite.py  split_by_state.py
tests/: test_geojsonl.py  test_spatialite.py
