[tool.poetry]
name = "mindatGIS"
version = "0.1.0"
description = "Tool for extracting Mindat data for GIS import."
authors = ["Martin Galese <martin@galese.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests-ratelimiter = "^0.6.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
